Removed deprecated parameters